--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css" />
   </head>
-
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
       <a class="navbar-brand" href="#">Keratine Shine</a>
@@ -42,19 +41,22 @@
       </div>
     </nav>
 
-    <div class="container-fluid p-0">
-      <div class="row">
+    <div class="container p-0">
+      <div
+        class="row"
+        style="margin-left: 0px !important; margin-right: 0px !important"
+      >
         <div class="hero-image">
-          <div class="col-md-2"></div>
-          <div class="col-md-4 align-self-center">
+          <div class="col-sm-2 col-2"></div>
+          <div class="col-sm-4 col-10 align-self-center">
             <div class="hero-text">
               <h2>Great Hairs Doesn't Happen By Chance,</h2>
               <h2>It happens by Appointment!</h2>
               <a href="contact.html" class="btn btn-primary">Learn More</a>
             </div>
           </div>
-          <div class="col-md-2"></div>
-          <div class="col-md-4"></div>
+          <div class="col-sm-2"></div>
+          <div class="col-sm-4"></div>
         </div>
       </div>
     </div>
